--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "private": false,
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
     "serve": "node server",
     "package": "cd .. && cd cpc-mobile && yarn buildCopy && cd .. && cd cpc-server && yarn serve"
   },
   "dependencies": {
+    "@craco/craco": "^6.2.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "compression": "^1.7.4",
@@ -28,12 +28,15 @@
     "mongoose": "^5.13.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "socket.io": "^4.1.3",
-    "uuid": "^8.3.2",
-    "yargs": "^17.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1",
+    "yargs": "^17.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "9",
+    "postcss": "7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
