--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "start": "craco start",
     "build": "craco build",
     "serve": "node server",
+    "conc": "concurrently \"yarn start\" \"node server.js\"",
     "package": "cd .. && cd cpc-mobile && yarn buildCopy && cd .. && cd cpc-server && yarn serve"
   },
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "compression": "^1.7.4",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
     "env-paths": "^2.2.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "passport": "^0.4.1",
